# rasa-talkers

./: .gitignore  README.md  blenderbot.py  pyproject.toml  shell.py
example/: config.yml  domain.yml  shell.py
example/actions/: actions.py  blenderbot.py
example/data/: nlu.yml  rules.yml  stories.yml
