[tool.poetry]
name = "rasa-talkers"
version = "0.1.0"
description = ""
authors = ["artemsnegirev"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
rasa = ">=3.0.0"
transformers = {extras = ["onnx"], version = "^4.19.2"}
torch = "^1.11.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
